--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="happen_mistake">Произошла ошибка: %1$s</string>
+    <string name="something_went_wrong">Что-то пошло не так.</string>
+    <string name="try_again">Попробуйте снова</string>
+    <string name="update">Обновить</string>
 </resources>
