--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="something_went_wrong">Что-то пошло не так.</string>
     <string name="try_again">Попробуйте снова</string>
     <string name="update">Обновить</string>
+    <string name="temperature_format">%1$s\\u00B0С</string>
+    <string name="weather_exception_text">Something went wrong, try to update</string>
 </resources>
